Fixed CSS bug that made model component hierarchy unreadable

--- a/media/css/core-1.css
+++ b/media/css/core-1.css
@@ -38,8 +38,3 @@ article > header > h2 > button {
 #userFeedback h3 {
     margin: 0;
 }
-
-ul {
-    margin-left: -25px;
-    margin-bottom: 0;
-}
